@@ -10,7 +10,7 @@ EMAIL_LIST=mtutaj@mcw.edu
 MMO_EMAIL_LIST=mtutaj@mcw.edu
 INACTIVE_IDS_EMAIL_LIST=mtutaj@mcw.edu
 if [ "$SERVER" == "REED" ]; then
-    EMAIL_LIST=mtutaj@mcw.edu,slaulede@mcw.edu
+    EMAIL_LIST=mtutaj@mcw.edu,slaulede@mcw.edu,jrsmith@mcw.edu
     MMO_EMAIL_LIST=mtutaj@mcw.edu,jrsmith@mcw.edu
     INACTIVE_IDS_EMAIL_LIST=sjwang@mcw.edu,gthayman@mcw.edu,mtutaj@mcw.edu
 fi
