@@ -1,3 +1,6 @@
+2020-04-16
+-added reporting of duplicate hgnc ids
+
 2020-04-06
 -discontinued logging of details of qtls with inactive markers in the main summary email
 
